12-Jan-2016 Fixes #105. Added documentation for the pre- and post-functions available in TokenizedStrings.

12-Jan-2016 Fixes #104. Very wide Native builds were not displaying the output and error streams from external processes launched.

09-Jan-2016 Fixes #94. Overriding the macros 'pluginprefix' and 'pluginext' are now honoured in Xcode projects. Updated the PluginTest test case to exercise changing these macros.

08-Jan-2016 Fixes #102. Preprocessor defines with quotes specified from the build scripts are now supported consistently across platforms and IDEs in BuildAMation. Added a test case, PreprocessorStringTest1, to exercise these forms. To specify a quoted string as a preprocessor definition within a (private or public) patch, use (settings as ICommonCompilerSettings).PreprocessorDefines.Add("DEFNAME", "\"astring\""); or the TokenizedString function (settings as ICommonCompilerSettings).PreprocessorDefines.Add("DEFNAME", this.CreateTokenizedString("@escapedquotes(apath)"));

06-Jan-2016 Fixes #100. Added CopiedFilename write property to Publisher.CollatedDirectory. If set, the directory is renamed during the copy. Also, Linux/OSX copy functionality has changed from 'cp' to 'bash -c cp' in order for wildcards to be evaluated.

06-Jan-2016 Added TokenizedString post-function, @ifnotempty(a,b). If 'a' is not an empty string, then use it, otherwise use b.

06-Jan-2016 Fixes #99. Xcode pre and post build scripts now escape double quotes.

06-Jan-2016 Added boolean property Bam.Core.TokenizedString.IsAliased, returning true when the TokenizedString is aliased to another.
