@@ -1,3 +1,5 @@
+12-Jan-2016 Fixes #106. TokenizedString post-function, removetrailingseperator, is misspelt. This function is now deprecated, and will be removed in v1.1.0. Replaced with the correctly spelt, removetrailingseparator.
+
 12-Jan-2016 Fixes #105. Added documentation for the pre- and post-functions available in TokenizedStrings.
 
 12-Jan-2016 Fixes #104. Very wide Native builds were not displaying the output and error streams from external processes launched.
